--- a/rp/dev.conf
+++ b/rp/dev.conf
@@ -17,6 +17,11 @@ http {
 		listen 3000;
 		server_name fe.local;
 
+		proxy_set_header X-Forwarded-Proto $scheme;
+	  if ( $http_x_forwarded_proto != 'https' ) {
+	    return 301 https://$host$request_uri;
+	  }
+
     location / {
       proxy_pass http://feapp;
       proxy_http_version 1.1;
