--- a/rp/prod.conf
+++ b/rp/prod.conf
@@ -13,21 +13,15 @@ http {
 	upstream feapp {
     least_conn;
 		server fe1:10000 weight=10 max_fails=3 fail_timeout=30s;
-		# server fe2:10000 weight=10 max_fails=3 fail_timeout=30s;
-		# server fe3:10000 weight=10 max_fails=3 fail_timeout=30s;
+		server fe2:10000 weight=10 max_fails=3 fail_timeout=30s;
+		server fe3:10000 weight=10 max_fails=3 fail_timeout=30s;
 	}
 
 	server {
 		listen 80;
 		listen 443;
-		################################
-		# listen  80  proxy_protocol;
-		# listen 443  ssl proxy_protocol;
-	  # real_ip_header  proxy_protocol;
-		################################
 
 		server_name koderkat.com;
-		# add_header Content-Security-Policy upgrade-insecure-requests;
 
 		# proxy_set_header X-Forwarded-Proto $scheme;
 	  # if ( $http_x_forwarded_proto != 'https' ) {
@@ -43,56 +37,12 @@ http {
       proxy_cache_bypass $http_upgrade;
     }
 
-
 		location /socket.io/ {
 			proxy_pass http://feapp;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
-			# proxy_set_header Upgrade $http_upgrade;
-      # proxy_set_header Connection $connection_upgrade;
-
-
-
-
-
-
-
-			# proxy_pass http://feapp/socket.io;
-	    # proxy_http_version 1.1;
-	    # proxy_set_header Upgrade $http_upgrade;
-	    # proxy_set_header Connection "upgrade";
-			#
-			# # prevents 502 bad gateway error
-	    # proxy_buffers 8 32k;
-	    # proxy_buffer_size 64k;
-
-      # proxy_pass http://feapp/socket.io;
-      # proxy_redirect off;
-			#
-      # proxy_set_header Host $host;
-      # proxy_set_header X-Real-IP $remote_addr;
-      # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			#
-      # proxy_http_version 1.1;
-      # proxy_set_header Upgrade $http_upgrade;
-      # proxy_set_header Upgrade websocket;
-      # proxy_set_header Connection "upgrade";
-      # proxy_read_timeout 86400;
-      # proxy_buffering off;
-      # proxy_headers_hash_max_size 1024;
 		}
-
-		################################
-	  # location /socket.io/ {
-		# 	# proxy_pass   http://127.0.0.1:8000/;
-		# 	proxy_pass   http://feapp:8000/;
-	  #   proxy_http_version  1.1;
-		# 	proxy_set_header  Upgrade  $http_upgrade;
-	  #   proxy_set_header  Connection  $connection_upgrade;
-	  #   proxy_set_header  X-Forwarded-For  $proxy_protocol_addr;
-	  # }
-		################################
 
 	}
 }
