--- a/rp/dev.conf
+++ b/rp/dev.conf
@@ -9,20 +9,20 @@ http {
 
 	upstream feapp {
     least_conn;
-		# server fe1:13000 weight=10 max_fails=3 fail_timeout=30s;
 		server fe1:13000 weight=10 max_fails=3 fail_timeout=30s;
 	}
 
 	server {
 		listen 3000;
-		server_name fe.local;
+		# server_name fe.local;
+		server_name koderkat.com;
 
 		# proxy_set_header X-Forwarded-Proto $scheme;
 	  # if ( $http_x_forwarded_proto != 'https' ) {
 	  #   return 301 https://$host$request_uri;
 	  # }
 
-    location / {
+		location / {
       proxy_pass http://feapp;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -30,6 +30,14 @@ http {
       proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
     }
+
+		location /socket.io/ {
+			proxy_pass http://feapp;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+		}
+
 	}
 
 }
