--- a/rp/prod.conf
+++ b/rp/prod.conf
@@ -23,10 +23,10 @@ http {
 
 		server_name koderkat.com;
 
-		# proxy_set_header X-Forwarded-Proto $scheme;
-	  # if ( $http_x_forwarded_proto != 'https' ) {
-	  #   return 301 https://$host$request_uri;
-	  # }
+		proxy_set_header X-Forwarded-Proto $scheme;
+	  if ( $http_x_forwarded_proto != 'https' ) {
+	    return 301 https://$host$request_uri;
+	  }
 
 		location / {
       proxy_pass http://feapp;
