--- a/rp/prod.conf
+++ b/rp/prod.conf
@@ -18,8 +18,8 @@ http {
 	}
 
 	server {
-		listen 80;
-		listen 443;
+		listen 80 proxy_protocol;
+		listen 443 proxy_protocol;
 
 		server_name koderkat.com;
 
@@ -35,6 +35,14 @@ http {
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
+
+			# proxy_set_header Connection "Upgrade";
+			proxy_set_header X-Real-IP       $proxy_protocol_addr;
+			proxy_set_header X-Forwarded-For $proxy_protocol_addr;
+			# Very important, controls proxied websocket connection timeout
+			proxy_read_timeout 600s;
+
+
     }
 
 		location /socket.io/ {
@@ -46,3 +54,30 @@ http {
 
 	}
 }
+
+
+
+
+
+
+
+
+
+
+
+# # proxy_protocol is necessary,
+# # if we want info of the client from ELB
+# listen 80 proxy_protocol;
+#
+# location / {
+# 		proxy_pass http://wsserver;
+#
+# 		proxy_set_header Upgrade $http_upgrade;
+# 		proxy_set_header Connection "Upgrade";
+#
+# 		proxy_set_header Host            $host;
+# 		proxy_set_header X-Real-IP       $proxy_protocol_addr;
+# 		proxy_set_header X-Forwarded-For $proxy_protocol_addr;
+#
+# 		# Very important, controls proxied websocket connection timeout
+# 		proxy_read_timeout 600s;
